added more filters like owner id
