# docs/swagger.json
@@ -150,14 +150,8 @@
                     },
                     {
                         "type": "string",
-                        "description": "params",
-                        "name": "param",
-                        "in": "query"
-                    },
-                    {
-                        "type": "string",
-                        "description": "Params",
-                        "name": "params",
+                        "description": "Comma seperated device addresses",
+                        "name": "device_addresses",
                         "in": "query"
                     }
                 ],
